remove the dev profiles